Kubernetes/authorization.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authorization
  namespace: working-time-measurement
spec:
  ports:
    - name: web
      port: 8083
      targetPort: 8083
  selector:
    app: authorization
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization
  namespace: working-time-measurement
spec:
  selector:
    matchLabels:
      app: authorization
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
        - image: authorization
        #- image: docker.io/mika2147/authorization:native
          name: authorization
          imagePullPolicy: Never
---
