Kubernetes/mongo-time.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-time
  namespace: working-time-measurement
spec:
  ports:
    - name: web
      port: 27017
      targetPort: 9998
  selector:
    app: mongo-time
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-time
  namespace: working-time-measurement
spec:
  selector:
    matchLabels:
      app: mongo-time
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo-time
    spec:
      containers:
        - image: mongo
          name: mongo-time
          imagePullPolicy: Never
---
