Kubernetes/postgres-users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-postgres
  namespace: working-time-measurement
  labels:
    app: users-postgres
spec:
  selector:
    app: users-postgres
  ports:
    - port: 5432 
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-postgres
  namespace: working-time-measurement
spec:
  serviceName: users-postgres
  replicas: 1
  selector:
    matchLabels:
      app: users-postgres
  template:
    metadata:
      labels:
        app: users-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: users-postgres-pv-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: users-postgres-pv-claim
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
