Kubernetes/wtm-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: working-time-measurement
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wtm-frontend
  template:
    metadata:
      labels:
        app: wtm-frontend
    spec:
      containers:
        - name: wtm-frontend
          image: wtm-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wtm-frontend
  namespace: working-time-measurement
spec:
  type: NodePort
  selector:
    app: wtm-frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      nodePort: 30000
